--- a/progetto/.gitignore
+++ b/progetto/.gitignore
@@ -21,3 +21,19 @@ node_modules/.cache/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+progetto/node_modules/.cache/
+progetto/node_modules/.cache/.eslintcache
+progetto/node_modules/.cache/default-development/0.pack
+progetto/node_modules/.cache/default-development/1.pack
+progetto/node_modules/.cache/default-development/3.pack
+progetto/node_modules/.cache/default-development/4.pack
+progetto/node_modules/.cache/default-development/5.pack
+progetto/node_modules/.cache/default-development/6.pack
+progetto/node_modules/.cache/default-development/8.pack
+progetto/node_modules/.cache/default-development/9.pack
+progetto/node_modules/.cache/default-development/10.pack
+progetto/node_modules/.cache/default-development/11.pack
+progetto/node_modules/.cache/default-development/index.pack
+progetto/node_modules/.cache/default-development/index.pack.old
