--- a/progetto/.gitignore
+++ b/progetto/.gitignore
@@ -37,3 +37,13 @@ progetto/node_modules/.cache/default-development/10.pack
 progetto/node_modules/.cache/default-development/11.pack
 progetto/node_modules/.cache/default-development/index.pack
 progetto/node_modules/.cache/default-development/index.pack.old
+
+
+progetto/node_modules/.cache/default-development/0.pack
+progetto/node_modules/.cache/default-development/1.pack
+progetto/node_modules/.cache/default-development/3.pack
+progetto/node_modules/.cache/default-development/4.pack
+progetto/node_modules/.cache/default-development/5.pack
+progetto/node_modules/.cache/default-development/6.pack
+progetto/node_modules/.cache/default-development/index.pack
+progetto/node_modules/.cache/default-development/index.pack.old
